code gen for receivers, rename pkgs

--- a/test/src/main/res/values/strings.xml
+++ b/test/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Test</string>
+    <string name="click_me">Click Me</string>
+    <string name="throw_exception">Throw Exception</string>
 </resources>
